# Catvibes

./: .gitignore  PyPIREADME.md  README.md  buildscript  catvibes.py  catvibes_lib.py  config  pyproject.toml  qt_gui.py
src/catvibes/: __main__.py  catvibes.py  catvibes_lib.py  custom_vlc.py  qt_gui.py  term_ui.py
